--- a/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
@@ -12,7 +12,7 @@
   outline-offset: -2px;
   border-radius: var(--border-radius-sm);
   display: inline-flex;
-  align-items: flex-start;
+  align-items: center;
   height: var(--spacing-08);
   line-height: var(--spacing-08);
   font-weight: normal;
@@ -89,6 +89,8 @@
     &.btn-danger { color: @brand-danger; }
     &.btn-info { color: @brand-info; }
   }
+
+  &.btn-block {width: 100%;}
 }
 
 
